--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -2,7 +2,7 @@
   background-color: black;
   color: white;
   font-size: 2rem;
-  font-family: var(--font-heading);
+  font-family: var(--font-header);
   font-weight: 700;
   display: flex;
   flex-direction: column;
