--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -12,6 +12,7 @@
 }
 
 .navbar_container {
+  width: 100%;
   cursor: pointer;
   margin: 1rem;
   padding: 1rem 1rem;
@@ -31,7 +32,7 @@
   color: var(--amethyst);
 }
 .navbar_search {
-  min-width: 65vw;
+  min-width: 60vw;
   border-radius: 2rem;
   padding: 1rem;
 }
@@ -39,4 +40,36 @@
 .avatar {
   width: 5rem;
   border-radius: 50%;
+}
+
+.navbar_btn {
+  font-size: 1.5rem;
+  font-family: var(--font-header);
+  font-weight: 700;
+  padding: 1rem 2rem;
+  border: 1px solid black;
+}
+.blackText_whiteBackground {
+  color: black;
+  background-color: white;
+}
+.blackText_whiteBackground:hover {
+  background-color: rgba(229, 229, 229, 0.4);
+}
+
+.whiteText_blackBackground {
+  color: white;
+  background-color: black;
+}
+
+.whiteText_blackBackground:hover {
+  background-color: rgba(0, 0, 0, 0.8);
+}
+.navbar_btn_container {
+  display: flex;
+  gap: 1rem;
+}
+
+button {
+  cursor: pointer;
 }
