--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -9,10 +9,10 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  --font-header: SuisseWorks, Georgia, Times,
+  --font-heading: SuisseWorks, Georgia, Times,
     'Times New Roman', serif, 'Apple Color Emoji',
     'Segoe UI Emoji', 'Segoe UI Symbol';
-  --font-heading: 'Udemy Sans', -apple-system,
+  --font-header: 'Udemy Sans', -apple-system,
     BlinkMacSystemFont, Roboto, 'Segoe UI',
     Helvetica, Arial, sans-serif,
     'Apple Color Emoji', 'Segoe UI Emoji',
