--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,4 +1,5 @@
 .footer_container {
+  margin-top: 1rem;
   background-color: black;
   color: white;
   font-size: 2rem;
@@ -8,6 +9,7 @@
   flex-direction: column;
   align-items: center;
   padding: 1rem 1rem;
+  height: 20vh;
   .small_font {
     font-size: 1.25rem;
   }
