--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -3,10 +3,7 @@
   margin-top: -0.5rem;
   font-size: 3rem;
   font-style: italic;
-  background: -webkit-linear-gradient(
-    var(--amethyst),
-    rgba(0, 0, 0, 0.8)
-  );
+  background: -webkit-linear-gradient(var(--amethyst), rgba(0, 0, 0, 0.8));
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
@@ -18,6 +15,7 @@
   padding: 1rem 1rem;
   display: flex;
   gap: 3rem;
+  height: 5vh;
   align-items: center;
   font-family: var(--font-header);
   font-weight: 500;
