--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -9,7 +9,8 @@
   flex-direction: column;
   align-items: center;
   padding: 1rem 1rem;
-  height: 20vh;
+  height: 15vh;
+  width: auto;
   .small_font {
     font-size: 1.25rem;
   }
