--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,5 +1,6 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: Inter, system-ui, Avenir, Helvetica,
+    Arial, sans-serif;
 
   line-height: 1.5;
   font-synthesis: none;
@@ -8,12 +9,19 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  --font-heading: SuisseWorks, Georgia, Times, 'Times New Roman', serif, 'Apple Color Emoji', 'Segoe UI Emoji',
+  --font-heading: SuisseWorks, Georgia, Times,
+    'Times New Roman', serif, 'Apple Color Emoji',
+    'Segoe UI Emoji', 'Segoe UI Symbol';
+  --font-header: 'Udemy Sans', -apple-system,
+    BlinkMacSystemFont, Roboto, 'Segoe UI',
+    Helvetica, Arial, sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji',
     'Segoe UI Symbol';
-  --font-header: 'Udemy Sans', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial, sans-serif,
-    'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
-  --font-text: 'Udemy Sans', 'SF Pro Text', -apple-system, BlinkMacSystemFont, Roboto, 'Segoe UI', Helvetica, Arial,
-    sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
+  --font-text: 'Udemy Sans', 'SF Pro Text',
+    -apple-system, BlinkMacSystemFont, Roboto,
+    'Segoe UI', Helvetica, Arial, sans-serif,
+    'Apple Color Emoji', 'Segoe UI Emoji',
+    'Segoe UI Symbol';
 
   --amethyst: #b356f2ff;
 }
@@ -25,4 +33,10 @@ html {
 body {
   margin: 0;
   box-sizing: border-box;
+}
+
+h1 {
+  font-size: 3rem;
+  font-weight: bold;
+  font-family: var(--font-heading);
 }
