--- a/client/src/page/HomePage/HomePage.scss
+++ b/client/src/page/HomePage/HomePage.scss
@@ -1,7 +1,6 @@
 .homepage_container {
-  height: auto;
-  width: 70vw;
-  margin: 2rem 29rem;
+  height: 100%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 4rem;
