--- a/client/src/components/Footer/Footer.scss
+++ b/client/src/components/Footer/Footer.scss
@@ -1,5 +1,4 @@
 .footer_container {
-  margin-top: 1rem;
   background-color: black;
   color: white;
   font-size: 2rem;
@@ -9,7 +8,7 @@
   flex-direction: column;
   align-items: center;
   padding: 1rem 1rem;
-  height: 15vh;
+  height: auto;
   width: auto;
   .small_font {
     font-size: 1.25rem;
