--- a/client/src/components/Navbar/Navbar.scss
+++ b/client/src/components/Navbar/Navbar.scss
@@ -18,7 +18,7 @@
   padding: 1rem 1rem;
   display: flex;
   gap: 3rem;
-  height: 5%;
+  height: auto;
   align-items: center;
   font-family: var(--font-header);
   font-weight: 500;
