--- a/client/src/page/LoginPage/LoginPage.scss
+++ b/client/src/page/LoginPage/LoginPage.scss
@@ -6,6 +6,45 @@
   flex-direction: column;
   gap: 1rem;
   justify-content: center;
+  .btn_form {
+    font-size: 1.5rem;
+    font-family: var(--font-header);
+    font-weight: 700;
+    padding: 1rem 2rem;
+    border: 1px solid black;
+    color: black;
+    width: 100%;
+    background-color: white;
+  }
+
+  .btn_form:hover {
+    background-color: rgba(229, 229, 229, 0.4);
+  }
+  input {
+    padding: 2rem 2rem;
+    font-weight: bold;
+  }
+
+  button {
+    background-color: var(--amethyst);
+    color: white;
+    font-size: 1.75rem;
+    font-weight: bold;
+    border: none;
+    padding: 1.5rem 2rem;
+  }
+
+  button:hover {
+    background-color: var(--amethyst-hover);
+  }
+
+  a:hover {
+    color: var(--amethyst-hover);
+  }
+
+  a {
+    color: var(--amethyst);
+  }
 }
 .form_container {
   display: flex;
@@ -13,20 +52,7 @@
   gap: 1rem;
   justify-content: center;
 }
-.btn_form {
-  font-size: 1.5rem;
-  font-family: var(--font-header);
-  font-weight: 700;
-  padding: 1rem 2rem;
-  border: 1px solid black;
-  color: black;
-  width: 100%;
-  background-color: white;
-}
 
-.btn_form:hover {
-  background-color: rgba(229, 229, 229, 0.4);
-}
 hr {
   width: 100%;
 }
@@ -41,24 +67,6 @@ hr {
   font-size: 1.3rem;
   font-weight: bold;
   position: absolute;
-}
-
-input {
-  padding: 2rem 2rem;
-  font-weight: bold;
-}
-
-button {
-  background-color: var(--amethyst);
-  color: white;
-  font-size: 1.75rem;
-  font-weight: bold;
-  border: none;
-  padding: 1.5rem 2rem;
-}
-
-a {
-  color: var(--amethyst);
 }
 
 .form_text {
