cart page desgin

--- a/client/src/components/TippyCustom/TippyCustom.scss
+++ b/client/src/components/TippyCustom/TippyCustom.scss
@@ -1,5 +1,8 @@
 .wapper_tippy_data {
-  padding: 1rem 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  text-align: left;
   .tippy_tab:hover {
     color: var(--amethyst);
   }
@@ -9,7 +12,13 @@
     font-weight: 400;
     font-size: 1.7rem;
   }
-  .tippy-popper {
-    background-color: white;
-  }
+}
+
+.tippy-popper .tippy-tooltip.light-theme {
+  border-radius: 2rem !important;
+  background-color: white !important;
+}
+
+.tippy-tooltip-content {
+  padding: 3rem 2rem;
 }
