--- a/client/src/page/CartPage/CartItem/CartItem.scss
+++ b/client/src/page/CartPage/CartItem/CartItem.scss
@@ -3,10 +3,17 @@
   margin: 1rem 0;
   height: auto;
   display: grid;
-  grid-template-columns: auto 1fr 0.2fr;
+  grid-template-columns: auto 1fr 0.2fr 0.1fr;
   gap: 2rem;
-
   span {
     font-size: 1.2rem;
+  }
+  .btn_delete {
+    padding: 2rem 2rem;
+    width: 2rem;
+    height: 2rem;
+    background-color: transparent;
+    border: none;
+    text-align: center;
   }
 }
