--- a/client/src/page/CartPage/CartPage.scss
+++ b/client/src/page/CartPage/CartPage.scss
@@ -1,8 +1,7 @@
 .cart_page_container {
   width: auto;
   height: auto;
-  padding: 2rem 2rem;
-  align-items: center;
+  padding: 4rem 4rem;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
@@ -14,4 +13,34 @@
 .align_right {
   text-align: right;
   margin-right: 11rem;
+}
+.break_line {
+  margin: 5rem auto;
+  width: 90%;
+}
+
+.btn_purchase {
+  color: white;
+  padding: 2rem 5rem;
+  width: 50%;
+  border: none;
+  font-size: 1.7rem;
+  font-weight: bold;
+  background-color: var(--amethyst);
+}
+
+.btn_purchase:hover {
+  background-color: var(--amethyst-hover);
+}
+
+.align_center {
+  text-align: center;
+}
+
+.success_message {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 1rem;
+  font-size: 15rem;
 }
